--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client": "npx browser-sync start -sw",
+    "server": "node server.js",
+    "start": "concurrently --kill-others \"npm run client\" \"npm run server\""
   },
+  "proxy": "http://localhost:8080",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jdmar3-comp426/a99-yetanotherteam.git"
@@ -21,6 +24,12 @@
   "homepage": "https://github.com/jdmar3-comp426/a99-yetanotherteam#readme",
   "dependencies": {
     "browser-sync": "^2.27.7",
-    "browsersync": "0.0.1-security"
+    "browsersync": "0.0.1-security",
+    "better-sqlite3": "7.4.5",
+    "express": "4.17.1",
+    "md5": "2.3.0",
+    "concurrently": "6.4.0",
+    "cors": "2.8.5",
+    "multer": "1.4.3"
   }
 }
